QPID-4138: HA sporadic failure in ha_tests

This was another test issue: trace logging had been left on by mistake, which was
slowing down the tests to the point they were hitting test time-outs.

Also in this patch: Include symbolic satus in membership update log message.

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk/qpid@1361393 13f79535-47bb-0310-9956-ffa450edef68